# static_media_server

./: .commitlintrc.json  .pre-commit-config.yaml  Cargo.toml  README.md
src/: cli.yml  lib.rs  main.rs
src/responders/: directory.rs  dispatcher.rs  mod.rs  not_found.rs  unimplemented.rs
src/templating/: helpers.rs  mod.rs
src/templating/templates/: base.hbs  directory.hbs  file.hbs  not_found.hbs  unimplemented.hbs
